--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@ pygments:    true
 
 
 permalink:     :year/:month/:title
+relative_permalinks: true
 paginate_path: 'page:num'
 
 markdown:      maruku
