Removed past events; added if check for events and display a no-events message if there are no

--- a/_data/events.yml
+++ b/_data/events.yml
@@ -1,11 +1,7 @@
-- name: dotJS
-  description: dotJS is one of the biggest JavaScript conferences in Europe, taking place in Paris.
-  price: 149€
-  url: http://dotjs.eu
-  date: 17.11.2014 
-
-- name: dotCSS
-  description: dotCSS is a daughter conference of dotJS in Paris, taking place for the first time ever this year. 
-  price: 119€
-  url: http://dotcss.eu
-  date: 14.11.2014
+#
+# - name: dotJS
+#   description: dotJS is one of the biggest JavaScript conferences in Europe, taking place in Paris.
+#   price: 149€
+#   url: http://dotjs.eu
+#   date: 17.11.2014
+# 
