Initial deploy test.

--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,7 @@
 source:      .
 destination: _site
 layouts:     _layouts
-include:     ['.htaccess']
-exclude:     []
-keep_files:  ['.git','.svn']
+keep_files:  ['.git']
 
 future:      true
 highlighter: pygments
