--- a/_data/events.yml
+++ b/_data/events.yml
@@ -1,8 +1,8 @@
-- name: CodePen Meetup
-  description: The first ever CodePen Meetup in Germany! Hosted by <a href="http://www.etecture.de/">Etecture</a> and sponsored by <a href="http://synoa.de">Synoa</a>.
-  price: Free
-  url: https://nvite.com/CodePenFFM/c78
-  date: 20.02.2015
+#- name: CodePen Meetup
+#  description: The first ever CodePen Meetup in Germany! Hosted by <a href="http://www.etecture.de/">Etecture</a> and sponsored by <a href="http://synoa.de">Synoa</a>.
+#  price: Free
+#  url: https://nvite.com/CodePenFFM/c78
+#  date: 20.02.2015
  
 #
 # - name: dotJS
