Added async font loading; added compressed layout for HTML compression; added new configs to exclude development files; added autoprefixer

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
 source:      .
 destination: _site
 layouts:     _layouts
-keep_files:  ['.git']
+exclude: [node_modules, README.md, CNAME, package.json, public-key,
+public-key.txt, assets/style.scss]
 
 future:      true
 highlighter: pygments
