--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,9 @@ paginate_path: "page/:num"
 markdown:      kramdown
 markdown_ext:  md
 
+defaults:
+  is_page: false
+
 excerpt_separator: "\n\n"
 
 safe:        false
