--- a/_data/events.yml
+++ b/_data/events.yml
@@ -1,5 +1,5 @@
 - name: Polymer Summit
-  description: Polymer Summit 2015 is an event taking place in Amsterdam, Netherlands with code labs, talks and "breakout sessions". It's also totally free!
+  description: Polymer Summit 2015 is an event taking place in Amsterdam, Netherlands with code labs, talks and breakout sessions. It's also totally free!
   price: free
   url: https://www.polymer-project.org/summit
   date: 14th & 15th of September 2015
