--- a/_data/events.yml
+++ b/_data/events.yml
@@ -1,8 +1,8 @@
-- name: Polymer Summit
-  description: Polymer Summit 2015 is an event taking place in Amsterdam, Netherlands with code labs, talks and breakout sessions. It's also totally free!
-  price: free
-  url: https://www.polymer-project.org/summit
-  date: 14th & 15th of September 2015
+#- name: Polymer Summit
+#  description: Polymer Summit 2015 is an event taking place in Amsterdam, Netherlands with code labs, talks and breakout sessions. It's also totally free!
+#  price: free
+#  url: https://www.polymer-project.org/summit
+#  date: 14th & 15th of September 2015
   
 # name: Nightlybuild
 # description: Nightlybuild is an annual after work Event in cologne taking place for the second time this year.
