[DEV] Install Guard / guard-jekyll-plus
This commit adds a Gemfile, Guardfile and a post explaining how those two
speeded up my jekyll development workflow. Yay!

Also small CSS changes.

--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,11 @@
 source:      .
 destination: _site
-layouts:     _layouts
-exclude: [node_modules, README.md, CNAME, package.json, src]
+layouts_dir:     _layouts
+exclude: [node_modules, README.md, CNAME, package.json, src, Guardfile]
 
 future:      true
 
 permalink:     :title
-paginate: 6
-paginate_path: "page/:num"
 
 markdown:      kramdown
 markdown_ext:  md
