--- a/_data/events.yml
+++ b/_data/events.yml
@@ -1,9 +1,21 @@
+- name: StuttgartJS
+  description: A local JavaScript meetup in the City of Stuttgart. I'll hold a talk about <a href="https://bullg.it">bullgit</a> together with <a href="https://twitter.com/TimPietrusky">Tim Pietrusky</a>.
+  price: free
+  url: http://www.meetup.com/de-DE/stuttgartjs/events/222094005/
+  date: 23. February 2016
+
+- name: Front Trends
+  description: Front-Trends is one of Europe’s most established annual conferences for professional front-end developers to meet, learn and get inspired.
+  price: 379€
+  url: https://2016.front-trends.com/
+  date: 18-20 May 2016
+
 #- name: Polymer Summit
 #  description: Polymer Summit 2015 is an event taking place in Amsterdam, Netherlands with code labs, talks and breakout sessions. It's also totally free!
 #  price: free
 #  url: https://www.polymer-project.org/summit
 #  date: 14th & 15th of September 2015
-  
+
 # name: Nightlybuild
 # description: Nightlybuild is an annual after work Event in cologne taking place for the second time this year.
 # price: 49€
