[EVENTS] Remove Front-Trends

--- a/_data/events.yml
+++ b/_data/events.yml
@@ -4,11 +4,11 @@
 #  url: http://www.meetup.com/de-DE/stuttgartjs/events/222094005/
 #  date: 23. February 2016
 
-- name: Front Trends
-  description: Front-Trends is one of Europe’s most established annual conferences for professional front-end developers to meet, learn and get inspired.
-  price: 379€
-  url: https://2016.front-trends.com/
-  date: 18-20 May 2016
+#- name: Front Trends
+#  description: Front-Trends is one of Europe’s most established annual conferences for professional front-end developers to meet, learn and get inspired.
+#  price: 379€
+#  url: https://2016.front-trends.com/
+#  date: 18-20 May 2016
 
 #- name: Polymer Summit
 #  description: Polymer Summit 2015 is an event taking place in Amsterdam, Netherlands with code labs, talks and breakout sessions. It's also totally free!
