--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,31 @@
-source:      .
+# Development
+port: 4000
+host: 127.0.0.1
+
+# Generic Information
+name: Kevin Gimbel
+description: "Developer based in Frankfurt, Germany. Lover of Sass, JavaScript, React and Bash Scripting. Builds Magento Shops for a living."
+
+# Build
+source: .
 destination: _site
-layouts_dir:     _layouts
+layouts_dir: _layouts
 exclude: [node_modules, README.md, CNAME, package.json, src, Guardfile]
 
-future:      true
+# Posts
+future: true
+permalink: :title
 
-permalink:     :title
+markdown: kramdown
+markdown_ext: md
 
-markdown:      kramdown
-markdown_ext:  md
+kramdown:
+  input: GFM
 
 defaults:
   is_page: false
 
 excerpt_separator: "\n\n"
 
-safe:        false
-host:        127.0.0.1
-port:        4000
-lsi:         false
+gems:
+- jemoji
